[package]
name = "generals_room_attacker"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_socketio = "0.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
env_logger = "0.10"
log = "0.4"
fastrand = "1.9"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
